[package]
name = "valley"
version = "0.1.0"
authors = ["Emmanuel Thompson <eet6646@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "valley-derive"
]

[dependencies]
valley-derive = { version = "^0.1.0", path = "valley-derive" }
